<resources>
    <string name="app_name">UBBPregatireAdmitere</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo_desc">logo of the app</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="quizzes">Quizzes</string>
    <string name="profile">Profile</string>
    <string name="problems">Problems</string>
    <string name="forum">Forum</string>
    <string name="e_mail">E-mail</string>
    <string name="codes">Codes</string>
    <string name="posts">Posts</string>
    <string name="progress">Progress</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="search">Search...</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="title_question">Title question</string>
    <string name="question_title">Question title</string>
    <string name="question_body">Question body</string>
    <string name="answer_body">Answer body</string>
    <string name="new_password">New password</string>
    <string name="logo">logo</string>
    <string name="reset_password">Reset password</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
</resources>
